--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>y</title>
   </head>
   <body>
+    <!-- vue首页 -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
