--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- vue首页 -->
-    <div id="app"></div>
+    <div id="app">hello word</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
